--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+---
+layout: post
+title:  "Quick first test post"
+excerpt: "A quick test post"
+date:  2017-02-18
+---
+
+Hello world, this is **markdown!!**.
+
